- darkness and title opacity dynamic from page header & / fixed navbar getting its gradient too early on sm devices due to the wrap = smaller page title on sm

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,7 +14,7 @@
     width: 100%;
     height: 100%;
     z-index: -1;
-    filter: brightness(calc(1 - var(--scroll-offset-multiplier)));
+    //filter: brightness(calc(1 - var(--scroll-offset-multiplier)));
 }
 
 .page-header {
@@ -23,7 +23,10 @@
     padding-top: calc(12vh + 76px);
 
     .page-title {
-        opacity: calc(1 - var(--scroll-offset-multiplier) * 2);
+        @media screen and (max-width: 768px) {
+            font-size: 32px;
+        }
+        //opacity: calc(1 - var(--scroll-offset-multiplier) * 2);
     }
   
     .edge {
